projects/vb6parse/snapshots/syntax/library/statements/rset/rset_multiple_on_same_line.snap
---
source: projects/vb6parse/src/syntax/library/statements/string_manipulation/rset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: RSetStatement
      children:
        - kind: RSetKeyword
          text: RSet
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: a
            - kind: Whitespace
              text: " "
            - kind: EqualityOperator
              text: "="
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: x
        - kind: IdentifierExpression
          children:
            - kind: ColonOperator
              text: ":"
    - kind: Whitespace
      text: " "
    - kind: RSetStatement
      children:
        - kind: RSetKeyword
          text: RSet
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: b
            - kind: Whitespace
              text: " "
            - kind: EqualityOperator
              text: "="
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: y
        - kind: IdentifierExpression
          children:
            - kind: Newline
              text: "\n"
